<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">Dhaka</string>
    <string name="weather_status">Cloudy</string>
    <string name="temperature">%1$s°c</string>

    <string name="humidity">Humidity: %s</string>
    <string name="max_temp">Max. Temp.: %1$s°c</string>
    <string name="min_temp">Min. Temp.: %1$s°c</string>
    <string name="humidity_preview">Humidity: 70</string>
    <string name="wind_speed_preview">Wind Speed: 5.52</string>
    <string name="max_temp_preiview">Max. Temp: 38°c</string>
    <string name="min_temp_preview">Min. Temp: 27°c</string>
    <string name="temp_preview">25°c</string>
    <string name="city_name_preview">Washington DC</string>
    <string name="wind_speed">Wind Speed: %s</string>
</resources>